core/flux-system/flux-operator/web/httproute.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.wynning.tech/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: flux-operator
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Flux Operator"
    gethomepage.dev/description: "App Management"
    gethomepage.dev/group: "Operations"
    gethomepage.dev/icon: "https://${FLUXCD_OPERATOR_HOSTNAME}/favicon.svg"
    gethomepage.dev/weight: "20"
spec:
  parentRefs:
    - name: envoy-internal
      namespace: networking
  hostnames:
    - "${FLUXCD_OPERATOR_HOSTNAME}"
  rules:
    - backendRefs:
        - name: flux-operator
          port: 9080
